2017-01-23: 1.4.4:
------------------
  * Set CONDA_PREFIX environment variable in cwp.py, fix PATH


2017-01-19: 1.4.3:
------------------
  * fix fallback to user-mode shortcut if elevation denied, #39


2016-05-26: 1.4.1
-----------------
  * Disable 'quicklaunch' shortcuts for SYSTEM user (#33)


2016-05-25: 1.4.0
-----------------
  * Add license explicitly (BSD 3-clause) (#26)
  * Rework elevation on Windows to not use separate batch file (#27)
  * Improve support for non-ascii characters (#27)
  * Migrate to Windows KnownFolder instead of CSIDL for win > XP (#27)
  * support istalling as SYSTEM user on Windows (for SCCM usage) (#29)
  * Add Appveyor for build testing (#30)
  * Drop CSIDL support in favor of uniform KnownFolder usage (#31)


2016-01-11: 1.3.2
-----------------
  * keep temporary directory around, due to strange Windows race condition


2015-12-03: 1.3.1
-----------------
  * add Windows elevation, see PR #22


2015-12-02: 1.3.0
-----------------
  * add menuinst entry point module menuinst.main
  * fixes for Windows XP


2015-10-27: 1.1.2
-----------------
  * remove all use of root_prefix (it is always sys.prefix), and subprocess
    calls to Python (which does not work on Windows XP with pythonw.exe)


2015-10-15: 1.1.0
-----------------
  * add suffix for environment name to shortcuts on win, #4
  * clarify root prefix / env prefix distinction (affects menu names)


2014-07-30: 1.0.4
-----------------
  * support 'script' key to shortcut to arbitrary executable


2013-10-28: 1.0.3
-----------------
  * make it compatible with python 3


2013-10-16: 1.0.2
-----------------
  * add initial support for recognition of non-admin installations
  * make the shortcut function unicode


2013-06-19: 1.0.1
-----------------
  * fix minor bug on Windows
  * install system wide on Windows


2013-02-25: 1.0.0
-----------------
  * simplified and changed API
  * removed egginst dependency
  * renamed appinst to menuinst
  * only supports Windows for now
